[tool.poetry]
name = "gridworld-mikkel"
version = "0.1.0"
description = ""
authors = ["Sebastian Vargr <sebbdk@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
